# synaptic

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
contracts/: activation.schema.json  atom.schema.json  edge.schema.json  meta_candidate.schema.json
docs/: BOOTSTRAP.md  COMMAND_PROTOCOL.md  ROADMAP.md  SCHEMAS.md  USE_CASES.md  VISION.md
examples/: agent_memory_minimal.py
scripts/: smoke.py
synaptic/: brief.py  cli.py  config.py  decay.py  embeddings.py  index.py  models.py  prune.py  retrieve.py  store.py  util.py
