[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synaptic"
version = "0.1.1"
description = "Synaptic: a local, cacheable AI memory store (L1 retrieval + L2 neighbor/pattern discovery)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Resonant Labs"}]
dependencies = []

[project.scripts]
syn = "synaptic.cli:main"
